@@ -1,29 +1,26 @@
-FILES
 ChangeLog
-bmake.cat1
-boot-strap
-bsd.after-import.mk
-os.sh
-makefile.in
+FILES
 Makefile
 Makefile.config.in
 PSD.doc/Makefile
 PSD.doc/tutorial.ms
 README
+aclocal.m4
 arch.c
+bmake.1
+bmake.cat1
+boot-strap
+bsd.after-import.mk
 buf.c
 buf.h
 compat.c
 cond.c
-make-conf.h
-make_malloc.c
-make_malloc.h
 config.h.in
 configure
-aclocal.m4
 configure.in
 dir.c
 dir.h
+dirname.c
 find_lib.sh
 for.c
 getopt.c
@@ -32,16 +29,6 @@ hash.h
 install-sh
 job.c
 job.h
-meta.c
-meta.h
-dirname.c
-realpath.c
-strlcpy.c
-strlist.c
-strlist.h
-stresep.c
-trace.c
-trace.h
 lst.h
 lst.lib/Makefile
 lst.lib/lstAppend.c
@@ -74,26 +61,36 @@ lst.lib/lstReplace.c
 lst.lib/lstSucc.c
 machine.sh
 main.c
+make-bootstrap.sh.in
+make-conf.h
 make.1
-bmake.1
 make.c
 make.h
-make-bootstrap.sh.in
+make_malloc.c
+make_malloc.h
+makefile.in
+meta.c
+meta.h
 missing/sys/cdefs.h
 mkdeps.sh
 nonints.h
+os.sh
 parse.c
 pathnames.h
 ranlib.h
+realpath.c
 setenv.c
 sigcompat.c
 sprite.h
 str.c
+stresep.c
+strlcpy.c
+strlist.c
+strlist.h
 suff.c
 targ.c
-util.c
-var.c
-wait.h
+trace.c
+trace.h
 unit-tests/Makefile.in
 unit-tests/comment
 unit-tests/cond1
@@ -123,63 +120,6 @@ unit-tests/test.exp
 unit-tests/unexport
 unit-tests/unexport-env
 unit-tests/varcmd
-mk/ChangeLog
-mk/FILES
-mk/README
-mk/auto.obj.mk
-mk/autoconf.mk
-mk/autodep.mk
-mk/auto.dep.mk
-mk/dep.mk
-mk/doc.mk
-mk/dpadd.mk
-mk/final.mk
-mk/host-target.mk
-mk/host.libnames.mk
-mk/inc.mk
-mk/init.mk
-mk/install-mk
-mk/java.mk
-mk/lib.mk
-mk/libnames.mk
-mk/libs.mk
-mk/links.mk
-mk/man.mk
-mk/mk-files.txt
-mk/nls.mk
-mk/obj.mk
-mk/options.mk
-mk/own.mk
-mk/prlist.mk
-mk/prog.mk
-mk/progs.mk
-mk/rst2htm.mk
-mk/scripts.mk
-mk/srctop.mk
-mk/subdir.mk
-mk/sys.mk
-mk/sys.clean-env.mk
-mk/sys.dependfile.mk
-mk/sys/AIX.mk
-mk/sys/Darwin.mk
-mk/sys/Generic.mk
-mk/sys/HP-UX.mk
-mk/sys/IRIX.mk
-mk/sys/Linux.mk
-mk/sys/NetBSD.mk
-mk/sys/OSF1.mk
-mk/sys/OpenBSD.mk
-mk/sys/SunOS.mk
-mk/sys/UnixWare.mk
-mk/target-flags.mk
-mk/warnings.mk
-mk/yacc.mk
-mk/dirdeps.mk
-mk/gendirdeps.mk
-mk/install-new.mk
-mk/meta2deps.py
-mk/meta2deps.sh
-mk/meta.sys.mk
-mk/meta.autodep.mk
-mk/meta.stage.mk
-mk/meta.subdir.mk
+util.c
+var.c
+wait.h
